# fl

./: .gitignore  Cargo.toml  README.md  TODO.md  default_config.toml
src/: check.rs  commit.rs  config.rs  fs_helper.rs  lib.rs  main.rs  rename_detection.rs  tests.rs  toml_helper.rs
src/tests/: mod.rs  test_diff.rs  test_repo.rs
test_repo/.fl/: STAGE
tests/: check.rs  commit.rs  config.rs  test_cli.rs
