[package]
name = "fl"
description = "A git-like way to track changes made to HUGE files, using hashes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["cargo"] }
colored = "3.1.1"
filelist = { git = "https://github.com/Barni228/filelist", version = "0.2.0" }
fs-err = "3.3.0"
pathfinding = "4.15.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde-human-readable"] }
toml = "1.1.2"
