[package]
name = "fl"
description = "A git-like way to track changes made to HUGE files, using hashes"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["cargo"] }
colored = "3.1.1"
conf = { version = "0.15.22", package = "config", default-features = false, features = [
    "toml",
] }
filelist = { git = "https://github.com/Barni228/filelist", version = "0.3.0" }
fs-err = "3.3.0"
miette = { version = "7.6.0", features = ["fancy"] }
pathfinding = "4.15.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde-human-readable"] }
toml = "1.1.2"
toml_edit = "0.25.10"

[dev-dependencies]
assert_cmd = { version = "2.2.0", features = ["color"] }
predicates = { version = "3.1.4", default-features = false }
tempfile = "3.27.0"
