[package]
name = "fl"
version = "0.2.0"
edition = "2024"
description = "A git-like way to track changes made to HUGE files, using hashes"
repository = "https://github.com/Barni228/fl"
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["cargo"] }
colored = "3.1.1"
conf = { package = "config", version = "0.15.22", default-features = false, features = [
  "toml",
] }
filelist = { git = "https://github.com/Barni228/filelist", version = "0.3.0" }
fs-err = "3.3.0"
miette = { version = "7.6.0", features = ["fancy"] }
pathfinding = "4.15.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde-human-readable"] }
toml = "1.1.2"
toml_edit = "0.25.10"

[dev-dependencies]
assert_cmd = { version = "2.2.0", features = ["color"] }
predicates = { version = "3.1.4", default-features = false }
tempfile = "3.27.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
